[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/NPCs/NPC.gd" type="Script" id=1]
[ext_resource path="res://src/Objects/Detection_marker/Detection_marker.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/Poppins-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sfx/detection.mp3" type="AudioStream" id=5]
[ext_resource path="res://src/Objects/Bags/bag.mp3" type="AudioStream" id=6]
[ext_resource path="res://src/NPCs/tie.mp3" type="AudioStream" id=7]
[ext_resource path="res://src/NPCs/knockout.mp3" type="AudioStream" id=8]
[ext_resource path="res://src/Weapons/M9/assets/pistolShoot.mp3" type="AudioStream" id=9]
[ext_resource path="res://src/NPCs/SoftCollision.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape2D" id=6]
radius = 91.43
height = 274.283

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 76, 96 )

[sub_resource type="DynamicFont" id=3]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="NPC" type="Node2D" groups=["Detection", "npc"]]
z_index = 4
script = ExtResource( 1 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
radius = 60.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.35, 0.35 )

[node name="Raycasts" type="Node2D" parent="AnimatedSprite"]
scale = Vector2( 2.85, 2.85 )

[node name="Hitbox" type="Area2D" parent="AnimatedSprite" groups=["hitbox_npc"]]
visible = false
collision_layer = 4
collision_mask = 96

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Hitbox"]
position = Vector2( -4, 0 )
shape = SubResource( 6 )

[node name="Detect" type="Area2D" parent="AnimatedSprite"]
visible = false
position = Vector2( -200, 0 )
scale = Vector2( 2.85, 2.85 )
collision_layer = 256
collision_mask = 32777

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AnimatedSprite/Detect"]
position = Vector2( 22.8571, 0 )
polygon = PoolVector2Array( 55, -75, 2500, -1500, 2500, 1500, 55, 75 )

[node name="BulletOrigin" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 114.286, 0 )

[node name="EscapeRay" type="RayCast2D" parent="AnimatedSprite"]
scale = Vector2( 2.85, 2.85 )
cast_to = Vector2( 1000, 0 )

[node name="SoftCollision" parent="AnimatedSprite" instance=ExtResource( 11 )]

[node name="Marker" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -150 )
z_index = 10

[node name="AnimatedSprite" parent="Marker" index="0"]
position = Vector2( 0, -9 )

[node name="Detection_bar" type="ProgressBar" parent="."]
margin_left = -104.0
margin_top = -104.0
margin_right = 106.0
margin_bottom = -81.0
custom_fonts/font = SubResource( 1 )

[node name="Interaction_hitbox" type="Area2D" parent="." groups=["detectable", "interactable", "npc"]]
visible = false
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction_hitbox"]
position = Vector2( -4, 0 )
shape = SubResource( 2 )

[node name="Detection_timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Alert_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Interaction_timer" type="Timer" parent="."]
one_shot = true

[node name="Shoot_timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true

[node name="Escape_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Dissappear" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="DefferedTimer" type="Timer" parent="."]
autostart = true

[node name="Interaction_panel" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.0
margin_top = -376.0
margin_right = 152.0
margin_bottom = -112.0

[node name="VBoxContainer" type="VBoxContainer" parent="Interaction_panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 289.0
margin_bottom = 257.0

[node name="Title" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_right = 282.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "NPC"
align = 1

[node name="Action1" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 72.0
margin_right = 282.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 4 )
text = "Hold [F] to Tie"
align = 1

[node name="Action2" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 111.0
margin_right = 282.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 4 )
text = "Hold [X] to Interrogate"
align = 1

[node name="Action3" type="Label" parent="Interaction_panel/VBoxContainer"]
margin_top = 150.0
margin_right = 282.0
margin_bottom = 223.0
custom_fonts/font = SubResource( 4 )
text = "Approach with a gun to hostage"
align = 1
autowrap = true

[node name="Interaction_progress" type="ProgressBar" parent="Interaction_panel/VBoxContainer"]
margin_top = 227.0
margin_right = 282.0
margin_bottom = 250.0
custom_fonts/font = SubResource( 1 )
step = 1.0
rounded = true

[node name="detection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"

[node name="bag" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 10.0
bus = "SFX"

[node name="tie" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 10.0
bus = "SFX"

[node name="knockout" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 10.0
bus = "SFX"

[node name="shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 10.0
bus = "SFX"

[connection signal="area_entered" from="AnimatedSprite/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_entered" from="AnimatedSprite/Detect" to="." method="_on_Detect_area_entered"]
[connection signal="area_exited" from="AnimatedSprite/Detect" to="." method="_on_Detect_area_exited"]
[connection signal="body_entered" from="AnimatedSprite/Detect" to="." method="_on_Detect_body_entered"]
[connection signal="body_exited" from="AnimatedSprite/Detect" to="." method="_on_Detect_body_exited"]
[connection signal="timeout" from="Detection_timer" to="." method="_on_Detection_timer_timeout"]
[connection signal="timeout" from="Alert_timer" to="." method="_on_Alert_timer_timeout"]
[connection signal="timeout" from="Interaction_timer" to="." method="_on_Interaction_timer_timeout"]
[connection signal="timeout" from="Shoot_timer" to="." method="_on_Shoot_timer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="Escape_timer" to="." method="_on_Escape_timer_timeout"]
[connection signal="timeout" from="Dissappear" to="." method="_on_Dissappear_timeout"]
[connection signal="timeout" from="DefferedTimer" to="." method="_on_DefferedTimer_timeout"]

[editable path="Marker"]
